Trabalho 3 - Semanticos/parserSimples.output
Gramática

    0 $accept: program $end

    1 $@1: ε

    2 $@2: ε

    3 program: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIM

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: declaracao_variaveis
    6          | ε

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_LOGICO
   10     | T_INTEIRO

   11 $@3: ε

   12 lista_variaveis: T_IDENTIF $@3 lista_variaveis
   13                | T_IDENTIF

   14 lista_comandos: comando lista_comandos
   15               | ε

   16 comando: entrada_saida
   17        | repeticao
   18        | selecao
   19        | atribuicao

   20 entrada_saida: leitura
   21              | escrita

   22 $@4: ε

   23 leitura: T_LEIA $@4 T_IDENTIF

   24 escrita: T_ESCREVA expressao

   25 repeticao: T_ENQTO expressao T_FACA lista_comandos T_FIMENQTO

   26 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

   27 atribuicao: T_IDENTIF T_ATRIB expressao

   28 expressao: expressao T_VEZES expressao
   29          | expressao T_DIV expressao
   30          | expressao T_MAIS expressao
   31          | expressao T_MENOS expressao
   32          | expressao T_MAIOR expressao
   33          | expressao T_MENOR expressao
   34          | expressao T_IGUAL expressao
   35          | expressao T_E expressao
   36          | expressao T_OU expressao
   37          | termo

   38 termo: T_IDENTIF
   39      | T_NUMERO
   40      | T_V
   41      | T_F
   42      | T_NAO termo
   43      | T_ABRE expressao T_FECHA


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIM (260) 3
    T_LEIA (261) 23
    T_ESCREVA (262) 24
    T_SE (263) 26
    T_ENTAO (264) 26
    T_SENAO (265) 26
    T_FIMSE (266) 26
    T_ENQTO (267) 25
    T_FACA (268) 25
    T_FIMENQTO (269) 25
    T_MAIS (270) 30
    T_MENOS (271) 31
    T_VEZES (272) 28
    T_DIV (273) 29
    T_MAIOR (274) 32
    T_MENOR (275) 33
    T_IGUAL (276) 34
    T_E (277) 35
    T_OU (278) 36
    T_NAO (279) 42
    T_ATRIB (280) 27
    T_FECHA (281) 43
    T_INTEIRO (282) 10
    T_LOGICO (283) 9
    T_V (284) 40
    T_F (285) 41
    T_IDENTIF (286) 4 12 13 23 27 38
    T_NUMERO (287) 39
    T_ABRE (288) 43


Não terminais com as regras onde eles aparecem

    $accept (34)
        à esquerda: 0
    program (35)
        à esquerda: 3
        à direita: 0
    $@1 (36)
        à esquerda: 1
        à direita: 3
    $@2 (37)
        à esquerda: 2
        à direita: 3
    cabecalho (38)
        à esquerda: 4
        à direita: 3
    variaveis (39)
        à esquerda: 5 6
        à direita: 3
    declaracao_variaveis (40)
        à esquerda: 7 8
        à direita: 5 7
    tipo (41)
        à esquerda: 9 10
        à direita: 7 8
    lista_variaveis (42)
        à esquerda: 12 13
        à direita: 7 8 12
    $@3 (43)
        à esquerda: 11
        à direita: 12
    lista_comandos (44)
        à esquerda: 14 15
        à direita: 3 14 25 26
    comando (45)
        à esquerda: 16 17 18 19
        à direita: 14
    entrada_saida (46)
        à esquerda: 20 21
        à direita: 16
    leitura (47)
        à esquerda: 23
        à direita: 20
    $@4 (48)
        à esquerda: 22
        à direita: 23
    escrita (49)
        à esquerda: 24
        à direita: 21
    repeticao (50)
        à esquerda: 25
        à direita: 17
    selecao (51)
        à esquerda: 26
        à direita: 18
    atribuicao (52)
        à esquerda: 27
        à direita: 19
    expressao (53)
        à esquerda: 28 29 30 31 32 33 34 35 36 37
        à direita: 24 25 26 27 28 29 30 31 32 33 34 35 36 43
    termo (54)
        à esquerda: 38 39 40 41 42 43
        à direita: 37 42


Estado 0

    0 $accept: • program $end

    T_PROGRAMA  deslocar, e ir ao estado 1

    program    ir ao estado 2
    cabecalho  ir ao estado 3


Estado 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 4


Estado 2

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 5


Estado 3

    3 program: cabecalho • $@1 variaveis $@2 T_INICIO lista_comandos T_FIM

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 6


Estado 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $padrão  reduzir usando a regra 4 (cabecalho)


Estado 5

    0 $accept: program $end •

    $padrão  aceitar


Estado 6

    3 program: cabecalho $@1 • variaveis $@2 T_INICIO lista_comandos T_FIM

    T_INTEIRO  deslocar, e ir ao estado 7
    T_LOGICO   deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 6 (variaveis)

    variaveis             ir ao estado 9
    declaracao_variaveis  ir ao estado 10
    tipo                  ir ao estado 11


Estado 7

   10 tipo: T_INTEIRO •

    $padrão  reduzir usando a regra 10 (tipo)


Estado 8

    9 tipo: T_LOGICO •

    $padrão  reduzir usando a regra 9 (tipo)


Estado 9

    3 program: cabecalho $@1 variaveis • $@2 T_INICIO lista_comandos T_FIM

    $padrão  reduzir usando a regra 2 ($@2)

    $@2  ir ao estado 12


Estado 10

    5 variaveis: declaracao_variaveis •

    $padrão  reduzir usando a regra 5 (variaveis)


Estado 11

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 13

    lista_variaveis  ir ao estado 14


Estado 12

    3 program: cabecalho $@1 variaveis $@2 • T_INICIO lista_comandos T_FIM

    T_INICIO  deslocar, e ir ao estado 15


Estado 13

   12 lista_variaveis: T_IDENTIF • $@3 lista_variaveis
   13                | T_IDENTIF •

    T_IDENTIF  reduzir usando a regra 11 ($@3)
    $padrão    reduzir usando a regra 13 (lista_variaveis)

    $@3  ir ao estado 16


Estado 14

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •

    T_INTEIRO  deslocar, e ir ao estado 7
    T_LOGICO   deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 8 (declaracao_variaveis)

    declaracao_variaveis  ir ao estado 17
    tipo                  ir ao estado 11


Estado 15

    3 program: cabecalho $@1 variaveis $@2 T_INICIO • lista_comandos T_FIM

    T_LEIA     deslocar, e ir ao estado 18
    T_ESCREVA  deslocar, e ir ao estado 19
    T_SE       deslocar, e ir ao estado 20
    T_ENQTO    deslocar, e ir ao estado 21
    T_IDENTIF  deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 15 (lista_comandos)

    lista_comandos  ir ao estado 23
    comando         ir ao estado 24
    entrada_saida   ir ao estado 25
    leitura         ir ao estado 26
    escrita         ir ao estado 27
    repeticao       ir ao estado 28
    selecao         ir ao estado 29
    atribuicao      ir ao estado 30


Estado 16

   12 lista_variaveis: T_IDENTIF $@3 • lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 13

    lista_variaveis  ir ao estado 31


Estado 17

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $padrão  reduzir usando a regra 7 (declaracao_variaveis)


Estado 18

   23 leitura: T_LEIA • $@4 T_IDENTIF

    $padrão  reduzir usando a regra 22 ($@4)

    $@4  ir ao estado 32


Estado 19

   24 escrita: T_ESCREVA • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 39
    termo      ir ao estado 40


Estado 20

   26 selecao: T_SE • expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 41
    termo      ir ao estado 40


Estado 21

   25 repeticao: T_ENQTO • expressao T_FACA lista_comandos T_FIMENQTO

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 42
    termo      ir ao estado 40


Estado 22

   27 atribuicao: T_IDENTIF • T_ATRIB expressao

    T_ATRIB  deslocar, e ir ao estado 43


Estado 23

    3 program: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos • T_FIM

    T_FIM  deslocar, e ir ao estado 44


Estado 24

   14 lista_comandos: comando • lista_comandos

    T_LEIA     deslocar, e ir ao estado 18
    T_ESCREVA  deslocar, e ir ao estado 19
    T_SE       deslocar, e ir ao estado 20
    T_ENQTO    deslocar, e ir ao estado 21
    T_IDENTIF  deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 15 (lista_comandos)

    lista_comandos  ir ao estado 45
    comando         ir ao estado 24
    entrada_saida   ir ao estado 25
    leitura         ir ao estado 26
    escrita         ir ao estado 27
    repeticao       ir ao estado 28
    selecao         ir ao estado 29
    atribuicao      ir ao estado 30


Estado 25

   16 comando: entrada_saida •

    $padrão  reduzir usando a regra 16 (comando)


Estado 26

   20 entrada_saida: leitura •

    $padrão  reduzir usando a regra 20 (entrada_saida)


Estado 27

   21 entrada_saida: escrita •

    $padrão  reduzir usando a regra 21 (entrada_saida)


Estado 28

   17 comando: repeticao •

    $padrão  reduzir usando a regra 17 (comando)


Estado 29

   18 comando: selecao •

    $padrão  reduzir usando a regra 18 (comando)


Estado 30

   19 comando: atribuicao •

    $padrão  reduzir usando a regra 19 (comando)


Estado 31

   12 lista_variaveis: T_IDENTIF $@3 lista_variaveis •

    $padrão  reduzir usando a regra 12 (lista_variaveis)


Estado 32

   23 leitura: T_LEIA $@4 • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 46


Estado 33

   42 termo: T_NAO • termo

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    termo  ir ao estado 47


Estado 34

   40 termo: T_V •

    $padrão  reduzir usando a regra 40 (termo)


Estado 35

   41 termo: T_F •

    $padrão  reduzir usando a regra 41 (termo)


Estado 36

   38 termo: T_IDENTIF •

    $padrão  reduzir usando a regra 38 (termo)


Estado 37

   39 termo: T_NUMERO •

    $padrão  reduzir usando a regra 39 (termo)


Estado 38

   43 termo: T_ABRE • expressao T_FECHA

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 48
    termo      ir ao estado 40


Estado 39

   24 escrita: T_ESCREVA expressao •
   28 expressao: expressao • T_VEZES expressao
   29          | expressao • T_DIV expressao
   30          | expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIOR expressao
   33          | expressao • T_MENOR expressao
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao

    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52
    T_MAIOR  deslocar, e ir ao estado 53
    T_MENOR  deslocar, e ir ao estado 54
    T_IGUAL  deslocar, e ir ao estado 55
    T_E      deslocar, e ir ao estado 56
    T_OU     deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 24 (escrita)


Estado 40

   37 expressao: termo •

    $padrão  reduzir usando a regra 37 (expressao)


Estado 41

   26 selecao: T_SE expressao • T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE
   28 expressao: expressao • T_VEZES expressao
   29          | expressao • T_DIV expressao
   30          | expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIOR expressao
   33          | expressao • T_MENOR expressao
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao

    T_ENTAO  deslocar, e ir ao estado 58
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52
    T_MAIOR  deslocar, e ir ao estado 53
    T_MENOR  deslocar, e ir ao estado 54
    T_IGUAL  deslocar, e ir ao estado 55
    T_E      deslocar, e ir ao estado 56
    T_OU     deslocar, e ir ao estado 57


Estado 42

   25 repeticao: T_ENQTO expressao • T_FACA lista_comandos T_FIMENQTO
   28 expressao: expressao • T_VEZES expressao
   29          | expressao • T_DIV expressao
   30          | expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIOR expressao
   33          | expressao • T_MENOR expressao
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao

    T_FACA   deslocar, e ir ao estado 59
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52
    T_MAIOR  deslocar, e ir ao estado 53
    T_MENOR  deslocar, e ir ao estado 54
    T_IGUAL  deslocar, e ir ao estado 55
    T_E      deslocar, e ir ao estado 56
    T_OU     deslocar, e ir ao estado 57


Estado 43

   27 atribuicao: T_IDENTIF T_ATRIB • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 60
    termo      ir ao estado 40


Estado 44

    3 program: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIM •

    $padrão  reduzir usando a regra 3 (program)


Estado 45

   14 lista_comandos: comando lista_comandos •

    $padrão  reduzir usando a regra 14 (lista_comandos)


Estado 46

   23 leitura: T_LEIA $@4 T_IDENTIF •

    $padrão  reduzir usando a regra 23 (leitura)


Estado 47

   42 termo: T_NAO termo •

    $padrão  reduzir usando a regra 42 (termo)


Estado 48

   28 expressao: expressao • T_VEZES expressao
   29          | expressao • T_DIV expressao
   30          | expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIOR expressao
   33          | expressao • T_MENOR expressao
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao
   43 termo: T_ABRE expressao • T_FECHA

    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52
    T_MAIOR  deslocar, e ir ao estado 53
    T_MENOR  deslocar, e ir ao estado 54
    T_IGUAL  deslocar, e ir ao estado 55
    T_E      deslocar, e ir ao estado 56
    T_OU     deslocar, e ir ao estado 57
    T_FECHA  deslocar, e ir ao estado 61


Estado 49

   30 expressao: expressao T_MAIS • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 62
    termo      ir ao estado 40


Estado 50

   31 expressao: expressao T_MENOS • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 63
    termo      ir ao estado 40


Estado 51

   28 expressao: expressao T_VEZES • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 64
    termo      ir ao estado 40


Estado 52

   29 expressao: expressao T_DIV • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 65
    termo      ir ao estado 40


Estado 53

   32 expressao: expressao T_MAIOR • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 66
    termo      ir ao estado 40


Estado 54

   33 expressao: expressao T_MENOR • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 67
    termo      ir ao estado 40


Estado 55

   34 expressao: expressao T_IGUAL • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 68
    termo      ir ao estado 40


Estado 56

   35 expressao: expressao T_E • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 69
    termo      ir ao estado 40


Estado 57

   36 expressao: expressao T_OU • expressao

    T_NAO      deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_ABRE     deslocar, e ir ao estado 38

    expressao  ir ao estado 70
    termo      ir ao estado 40


Estado 58

   26 selecao: T_SE expressao T_ENTAO • lista_comandos T_SENAO lista_comandos T_FIMSE

    T_LEIA     deslocar, e ir ao estado 18
    T_ESCREVA  deslocar, e ir ao estado 19
    T_SE       deslocar, e ir ao estado 20
    T_ENQTO    deslocar, e ir ao estado 21
    T_IDENTIF  deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 15 (lista_comandos)

    lista_comandos  ir ao estado 71
    comando         ir ao estado 24
    entrada_saida   ir ao estado 25
    leitura         ir ao estado 26
    escrita         ir ao estado 27
    repeticao       ir ao estado 28
    selecao         ir ao estado 29
    atribuicao      ir ao estado 30


Estado 59

   25 repeticao: T_ENQTO expressao T_FACA • lista_comandos T_FIMENQTO

    T_LEIA     deslocar, e ir ao estado 18
    T_ESCREVA  deslocar, e ir ao estado 19
    T_SE       deslocar, e ir ao estado 20
    T_ENQTO    deslocar, e ir ao estado 21
    T_IDENTIF  deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 15 (lista_comandos)

    lista_comandos  ir ao estado 72
    comando         ir ao estado 24
    entrada_saida   ir ao estado 25
    leitura         ir ao estado 26
    escrita         ir ao estado 27
    repeticao       ir ao estado 28
    selecao         ir ao estado 29
    atribuicao      ir ao estado 30


Estado 60

   27 atribuicao: T_IDENTIF T_ATRIB expressao •
   28 expressao: expressao • T_VEZES expressao
   29          | expressao • T_DIV expressao
   30          | expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIOR expressao
   33          | expressao • T_MENOR expressao
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao

    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52
    T_MAIOR  deslocar, e ir ao estado 53
    T_MENOR  deslocar, e ir ao estado 54
    T_IGUAL  deslocar, e ir ao estado 55
    T_E      deslocar, e ir ao estado 56
    T_OU     deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 27 (atribuicao)


Estado 61

   43 termo: T_ABRE expressao T_FECHA •

    $padrão  reduzir usando a regra 43 (termo)


Estado 62

   28 expressao: expressao • T_VEZES expressao
   29          | expressao • T_DIV expressao
   30          | expressao • T_MAIS expressao
   30          | expressao T_MAIS expressao •
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIOR expressao
   33          | expressao • T_MENOR expressao
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 30 (expressao)


Estado 63

   28 expressao: expressao • T_VEZES expressao
   29          | expressao • T_DIV expressao
   30          | expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   31          | expressao T_MENOS expressao •
   32          | expressao • T_MAIOR expressao
   33          | expressao • T_MENOR expressao
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 31 (expressao)


Estado 64

   28 expressao: expressao • T_VEZES expressao
   28          | expressao T_VEZES expressao •
   29          | expressao • T_DIV expressao
   30          | expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIOR expressao
   33          | expressao • T_MENOR expressao
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao

    $padrão  reduzir usando a regra 28 (expressao)


Estado 65

   28 expressao: expressao • T_VEZES expressao
   29          | expressao • T_DIV expressao
   29          | expressao T_DIV expressao •
   30          | expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIOR expressao
   33          | expressao • T_MENOR expressao
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao

    $padrão  reduzir usando a regra 29 (expressao)


Estado 66

   28 expressao: expressao • T_VEZES expressao
   29          | expressao • T_DIV expressao
   30          | expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIOR expressao
   32          | expressao T_MAIOR expressao •
   33          | expressao • T_MENOR expressao
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao

    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 32 (expressao)


Estado 67

   28 expressao: expressao • T_VEZES expressao
   29          | expressao • T_DIV expressao
   30          | expressao • T_MAIS expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIOR expressao
   33          | expressao • T_MENOR expressao
   33          | expressao T_MENOR expressao •
   34          | expressao • T_IGUAL expressao
   35          | expressao • T_E expressao
   36          | expressao • T_OU expressao

    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_VEZES  deslocar, e ir ao estado 51
    T_DIV    deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 33 (expressao)


Estado 68
